// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          disabled={true}
          placeholder=" "
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ZTjWy"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF fuitrZ"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF hSExwn"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder=" "
          readOnly={true}
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oTTbF cyyCDq"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oTTbF fBmrjN"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF dudEwr"
          dir="rtl"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-fOpBKL dUFjbR"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="medium"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF izyiDj"
        placeholder="large"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF iDUbgU"
          placeholder="xlarge"
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF lmKnNf"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF bUpZmE"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK fQvxgz"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
